<resources>
    <string name="app_name">记了</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="CostGraph">支出图表</string>
    <string name="CostGraphByKind">分类支出</string>
    <string name="CostGraphByAccount">账户支出</string>
    <string name="IncomeGraph">收入图表</string>
    <string name="IncomeGraphByKind">分类收入</string>
    <string name="IncomeGraphByAccount">账户收入</string>
    <string name="MonthGraph">月度图表</string>
    <string name="MonthIncome">月度收入</string>
    <string name="MonthCost">月度支出</string>
    <string name="GraphByKind">分类</string>
    <string name="CostGraphBySecondClass">二级支出</string>
    <string name="IncomeGraphBySecondClass">二级收入</string>
    <string name="MonthCompare">收支对比</string>
    <string name="title_activity_settings">SettingsActivity</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="Men">成员收入</string>
    <string name="Menincome">成员支出</string>
</resources>