<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

    <androidx.viewpager.widget.ViewPager
        android:id="@+id/view_pager"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.github.mikephil.charting.charts.PieChart
            android:id="@+id/pie_chart"
            android:layout_width="400dp"
            android:layout_height="400dp" />
    </androidx.viewpager.widget.ViewPager>

    <Button
        android:layout_below="@+id/pie_chart"
        android:layout_centerHorizontal="true"
        android:id="@+id/btnBillDetail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text=""
        tools:ignore="NotSibling" />

    <com.xuexiang.xui.widget.alpha.XUIAlphaTextView
        android:id="@+id/expand_button"
        style="@style/TextAppearance.AppCompat.Medium"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        android:gravity="center"
        android:padding="16dp"
        android:text="@string/GraphByKind"
        />

    <ImageButton
        android:id="@+id/btnBack"
        android:layout_width="56dp"
        android:layout_height="56dp"
        android:layout_alignParentLeft="true"
        android:background="@color/xui_transparent"
        android:src="@drawable/ic_arrow_left" />


    <com.xuexiang.xui.widget.layout.ExpandableLayout
        android:layout_below="@id/expand_button"
        android:id="@+id/expandable_layout_1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:el_duration="1000"
        app:el_expanded="false">

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="120dp">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="60dp">

                <TextView
                    android:id="@+id/textCostGraph"
                    android:gravity="center"
                    android:layout_width="39dp"
                    android:layout_height="match_parent"
                    android:background="@drawable/rb_bg_selector"
                    android:text="@string/CostGraph" />

                <LinearLayout
                    android:layout_weight="1"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <Button
                        android:drawableTop="@drawable/ic_firstclasscost"
                        android:id="@+id/btnCostGraphByKind"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:background="@color/white"
                        android:paddingBottom="2dp"
                        android:textSize="13sp"
                        android:text="@string/CostGraphByKind" />

                </LinearLayout>

                <LinearLayout
                    android:layout_weight="1"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">
                    <Button
                        android:drawableTop="@drawable/ic_accountcost"
                        android:id="@+id/btnCostGraphByAccount"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:background="@color/white"
                        android:textSize="13sp"
                        android:paddingBottom="2dp"
                        android:text="@string/CostGraphByAccount" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:orientation="vertical">
                    <Button
                        android:drawableTop="@drawable/ic_monthcost"
                        android:id="@+id/btnMonthCost"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:background="@color/white"
                        android:textSize="13sp"
                        android:paddingBottom="2dp"
                        android:text="@string/MonthCost" />
                </LinearLayout>

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="60dp">

                <TextView
                    android:id="@+id/textIncomeGraph"
                    android:gravity="center"
                    android:layout_width="20dp"
                    android:layout_height="match_parent"
                    android:background="@drawable/rb_bg_selector"
                    android:text="@string/IncomeGraph" />

                <LinearLayout
                    android:layout_weight="1"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">
                    <Button
                        android:drawableTop="@drawable/ic_firstclassincome"
                        android:id="@+id/btnIncomeGraphByKind"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:background="@color/white"
                        android:textSize="13sp"
                        android:text="@string/IncomeGraphByKind" />
                </LinearLayout>
                <LinearLayout
                    android:layout_weight="1"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <Button
                        android:drawableTop="@drawable/ic_accountincome"
                        android:id="@+id/btnIncomeGraphByAccount"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:textSize="13sp"
                        android:layout_weight="1"
                        android:background="@color/white"
                        android:paddingBottom="2dp"
                        android:text="@string/IncomeGraphByAccount" />
                </LinearLayout>
                <LinearLayout
                    android:layout_weight="1"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">
                    <Button
                        android:drawableTop="@drawable/ic_monthincome"
                        android:id="@+id/btnMonthIncome"
                        android:layout_width="match_parent"
                        android:textSize="13sp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:background="@color/white"
                        android:paddingBottom="2dp"
                        android:text="@string/MonthIncome" />
                </LinearLayout>

            </TableRow>

        </TableLayout>

    </com.xuexiang.xui.widget.layout.ExpandableLayout>

    <RelativeLayout
        android:id="@+id/endlayout"
        android:layout_alignParentBottom="true"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="?attr/colorPrimary">
        <ImageView
            android:layout_centerHorizontal="true"
            android:layout_width="wrap_content"
            android:src="@drawable/ic_arrow_right"
            android:id="@+id/lianjiefu"
            android:layout_height="match_parent"/>
        <Button
            android:layout_toStartOf="@+id/lianjiefu"
            android:layout_height="40dp"
            android:layout_width="wrap_content"
            android:layout_centerVertical="true"
            android:id="@+id/btnSetStartDate"
            android:textSize="12sp"
            android:text="2020年12月12日"
            />

        <Button
            android:layout_toEndOf="@+id/lianjiefu"
            android:layout_height="40dp"
            android:layout_width="wrap_content"
            android:layout_centerVertical="true"
            android:id="@+id/btnSetEndDate"
            android:textSize="12sp"
            android:text="2020年12月12日"
            />
    </RelativeLayout>

</RelativeLayout>


